# nidhogg

./: .dockerignore  .gitignore  .pylintrc  README.md  dvc.yaml  http_server.py  linter.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  codeQL.yaml  linter.yaml  pr-opened-notification.yaml  release.yaml  terraform-apply.yaml  terraform-plan.yaml  terraform.yaml  test.yaml
docker/: alertmetrics.Dockerfile  frontend.Dockerfile  inference.Dockerfile
frontend/: Dockerfile  http_server.py
http_server/: Dockerfile
inference/: Dockerfile
inference/src/backend/: api.py
inference/src/data/: __init__.py
inference/src/models/: __init__.py  predict_model.py
inference/tests/: __init__.py  test_preprocess.py
notifications/: TelegramNotifier.py  telegram.py  telegram_notifier.py
notifications/templates/: low_precision.txt  pr_opened.txt
src/: frontend.py  index.html  inference.py  inference_api.py  predict_model.py  preprocess_data.py  run.py  train_model.py
src/alertmetrics/: app.py
src/alertmetrics/templates/: vote.html
src/common/: predicting.py  preprocessing.py
src/frontend/: app.py
src/frontend/templates/: index.html
src/tests/: __init__.py  test_preprocess.py
terraform/: .terraform.lock.hcl  k8s.tf  kubeconfig  locals.tf  main.tf  outputs.tf  pods.tf  variables.tf
