[tool.poetry]
name = "nidhogg"
version = "v0.8.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.9"
Flask = "2.1.2"
jupyter = "1.0.0"
matplotlib = "3.3.4"
nltk = "3.7"
numpy = "1.21.0"
pandas = "1.2.2"
requests = "2.27.1"
scikit-learn = "0.24.1"
scipy = "1.7.3"

[tool.poetry.dev-dependencies]
mllint = "0.12.1"
pylint = "2.13.9"
poetry = "^1.1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
